--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -27,6 +27,7 @@ body {
   display: flex;
   justify-content:space-between;
   align-items: center;
+
   .logokasa {
     width: 210px;
   }
@@ -34,6 +35,7 @@ body {
     display: flex;
     flex-direction: horizontal;
     gap: 50px;
+
     .navbar__link {
       color: $main-color;
       text-decoration: none;
@@ -45,50 +47,63 @@ body {
 }
 
 .banner {
+  position: relative;
   display: flex;
   margin: 0px 100px 50px 100px;
   max-width: 1240px;
   width: 100%;
-   .banner__img {
+
+  .banner__img {
     filter: brightness(70%);
     width: 100%;
     height: 223px;
     object-fit: cover;
     border-radius: 25px;
-  
-    
+  }
+
+  .banner__title {
+    position: absolute;
+    font-size: 48px;
+    color: $secondary-color;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 150%;
+    white-space: nowrap;
   }
 }
 
 .cards {
-  margin: 0px 100px 50px 100px;
+  margin: 0px 100px 0px 100px;
+  max-width: 1240px;
   padding: 50px;
   background-color:  $third-color;
   border-radius: 25px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
   flex-direction: row;
   flex-shrink: 0;
-  // gap: 80px;
-  
+  gap: 50px;
+
   .cards__house {
     position: relative;
-    width: 22%;
-   
-    
+    width: 30%;
+
     .cards__image {
-      // position: relative;
+      position: relative;
       width: 100%;
       border-radius: 25px;
-      object-fit: cover;
-      
-      
+      object-fit: cover;     
     } 
     .cards__title {
       position: absolute;
-      left: 0;
-      bottom: 0px;
+      line-height: 1.3em;
+      left: 10px;
+      bottom: 20px;
       font-size: 18px;
       color: $secondary-color;
     }
@@ -103,6 +118,7 @@ body {
   justify-content: center;
   height: 210px;
   gap: 29px;
+
   .footer__logo {
     width: 122px;
   }
