--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,9 +7,11 @@
 }
 
 //Couleurs
-$main-color: #FF6060;
+$main-color: black;
+// $main-color: #FF6060;
 $secondary-color: white;
 $third-color: #F6F6F6;
+$border-radius: 10px;
 
 body {
   margin: auto;
@@ -50,27 +52,29 @@ body {
 .banner {
   position: relative;
   display: flex;
+  height: 220px;
   margin: 50px 100px;
-
+  
   .banner__img {
-    filter: brightness(70%);
+    filter: brightness(50%);
     width: 100%;
-    height: 223px;
     object-fit: cover;
     border-radius: 25px;
+    box-shadow: 0px 3px 0px rgba(0,0,0,0.3);
   }
 
   .banner__title {
     position: absolute;
-    font-size: 1.5em;
+    font-size: 1.0em;
     color: $secondary-color;
+    margin: auto;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 150%;
+    // font-style: bold;
+    font-weight: 700;
+    text-shadow: 0px 3px 2px rgba(0,0,0,0.5);
     white-space: nowrap;
   }
 }
@@ -82,8 +86,9 @@ body {
   background-color:  $third-color;
   border-radius: 25px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   gap: 50px;
+
 
   .cards__house {
     position: relative;
@@ -91,11 +96,18 @@ body {
     .cards__image {
       position: relative;
       width: 100%;
-      border-radius: 25px;
-      object-fit: cover;     
+      border-radius: $border-radius;
+      object-fit: cover; 
+       overflow: hidden;    
     } 
-    .card_bg {
-      background-color: rgba($color: #000000, $alpha: 0.5);
+    .cards__gradient {
+      position: absolute;
+      top: -10px;
+      left:0;
+      background: linear-gradient( rgba(255, 255, 255, 0),rgba(0, 0, 0, 0.0),rgba(0, 0, 0, 0.4));
+      width: 100%;
+      height: 100%;
+      border-radius: $border-radius;
     }
     .cards__title {
       position: absolute;
@@ -124,7 +136,7 @@ body {
   }
   .footer__copyright {
     color: $secondary-color;
-    font-size: 26px;
+    font-size: 0.75em;
   }
 }
 
@@ -135,7 +147,6 @@ body {
     display: flex;
     justify-content:space-between;
     align-items: center;
-    
   
     .logokasa {
       width: 145px;
@@ -143,12 +154,12 @@ body {
     .navbar {
       display: flex;
       flex-direction: horizontal;
-      gap: 10px;
+      gap: 40px;
       
       .navbar__link {
         color: $main-color;
         text-decoration: none;
-        // font-size: 0.5em;
+        font-size: 0.75em;
       }
       .navbar__link:hover {
         text-decoration: underline;
@@ -159,19 +170,62 @@ body {
   .banner {
     margin: 0px 20px 20px 20px; /* Ajustez les marges pour les mobiles */
     max-width: 767px;
+    height: 110px; /* Ajustez la hauteur pour les mobiles si nécessaire */
+    border-radius: $border-radius;
+    
     .banner__img {
-      height: 150px; /* Ajustez la hauteur pour les mobiles si nécessaire */
+      border-radius: $border-radius;
     }
     .banner__title {
-      font-size: 24px; /* Ajustez la taille de police pour les mobiles */
-      line-height: 120%; /* Ajustez la hauteur de ligne pour les mobiles si nécessaire */
+      font-size: 0.5em;
+      top: 50%;
+      left: 10%;
+      transform: translate(-10%, -50%); /* Ajustez la taille de police pour les mobiles */
+      white-space: wrap;
     }
   }
 
   .cards {
     margin: 0px 20px 0px 20px;
+    padding: 0px;
+    background-color: $secondary-color;
+    gap:10px;
+
+    .cards__house {
+      position: relative;
+     
+      .cards__image {
+        position: relative;
+        width: 100%;
+        border-radius: $border-radius;
+        object-fit: cover;     
+      } 
+      
+      .cards__title {
+        position: absolute;
+        line-height: 1.3em;
+        left: 10px;
+        bottom: 20px;
+        font-size: 0.5em;
+        color: $secondary-color;
+        text-shadow: 1px 1px 1px black;
+      }
     }
-  
+  }
+
+  .footer {
+    margin-top: 20px;
+    background-color: black;
+
+    .footer__copyright {
+      margin-top: -20px;
+      width:20%;
+      text-align: center;
+      color: $secondary-color;
+      font-size: 0.35em;
+      line-height: 20px;
+    }
+  }
 }
 
 
