--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,7 +8,6 @@
 
 //Couleurs
 $main-color: black;
-// $main-color: #FF6060;
 $secondary-color: white;
 $third-color: #F6F6F6;
 $border-radius: 10px;
@@ -72,7 +71,6 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    // font-style: bold;
     font-weight: 700;
     text-shadow: 0px 3px 2px rgba(0,0,0,0.5);
     white-space: nowrap;
@@ -92,6 +90,7 @@ body {
 
   .cards__house {
     position: relative;
+    list-style: none;
    
     .cards__image {
       position: relative;
@@ -122,6 +121,7 @@ body {
 }
 
 .footer {
+  max-width: 3160px;
   margin-top: 50px;
   background-color: black;
   display: flex;
@@ -168,9 +168,9 @@ body {
   }
 
   .banner {
-    margin: 0px 20px 20px 20px; /* Ajustez les marges pour les mobiles */
+    margin: 0px 20px 20px 20px; 
     max-width: 767px;
-    height: 110px; /* Ajustez la hauteur pour les mobiles si nécessaire */
+    height: 110px; 
     border-radius: $border-radius;
     
     .banner__img {
@@ -180,7 +180,7 @@ body {
       font-size: 0.5em;
       top: 50%;
       left: 10%;
-      transform: translate(-10%, -50%); /* Ajustez la taille de police pour les mobiles */
+      transform: translate(-10%, -50%); 
       white-space: wrap;
     }
   }
