--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -38,13 +38,14 @@ body {
     gap: 50px;
     font-size: 0.6em;
 
-    .navbar__link {
+    &__link {
       color: $main-color;
       text-decoration: none;
+      &:hover {
+        text-decoration: underline;
+      }
     }
-    .navbar__link:hover {
-      text-decoration: underline;
-    }
+    
    }
 }
 
@@ -54,7 +55,7 @@ body {
   height: 220px;
   margin: 50px 100px;
   
-  .banner__img {
+  &__img {
     filter: brightness(50%);
     width: 100%;
     object-fit: cover;
@@ -62,7 +63,7 @@ body {
     box-shadow: 0px 3px 0px rgba(0,0,0,0.3);
   }
 
-  .banner__title {
+  &__title {
     position: absolute;
     font-size: 1.0em;
     color: $secondary-color;
@@ -78,7 +79,7 @@ body {
 }
 
 .cards {
-  margin: 0px 100px 0px 100px;
+  margin: 0px 100px 50px 100px;
   max-width: 1240px;
   padding: 50px;
   background-color:  $third-color;
@@ -88,18 +89,18 @@ body {
   gap: 50px;
 
 
-  .cards__house {
+  &__house {
     position: relative;
     list-style: none;
    
-    .cards__image {
+    &__image {
       position: relative;
       width: 100%;
       border-radius: $border-radius;
       object-fit: cover; 
        overflow: hidden;    
     } 
-    .cards__gradient {
+    &__gradient {
       position: absolute;
       top: -10px;
       left:0;
@@ -108,7 +109,7 @@ body {
       height: 100%;
       border-radius: $border-radius;
     }
-    .cards__title {
+    &__title {
       position: absolute;
       line-height: 1.3em;
       left: 10px;
@@ -122,7 +123,7 @@ body {
 
 .footer {
   max-width: 3160px;
-  margin-top: 50px;
+  // margin-top: 50px;
   background-color: black;
   display: flex;
   flex-direction: column;
@@ -131,10 +132,10 @@ body {
   height: 210px;
   gap: 29px;
 
-  .footer__logo {
+  &__logo {
     width: 122px;
   }
-  .footer__copyright {
+  &__copyright {
     color: $secondary-color;
     font-size: 0.75em;
   }
@@ -156,12 +157,12 @@ body {
       flex-direction: horizontal;
       gap: 40px;
       
-      .navbar__link {
+      &__link {
         color: $main-color;
         text-decoration: none;
         font-size: 0.75em;
       }
-      .navbar__link:hover {
+      &__link:hover {
         text-decoration: underline;
       }
      }
@@ -173,10 +174,10 @@ body {
     height: 110px; 
     border-radius: $border-radius;
     
-    .banner__img {
+    &__img {
       border-radius: $border-radius;
     }
-    .banner__title {
+    &__title {
       font-size: 0.5em;
       top: 50%;
       left: 10%;
@@ -191,17 +192,17 @@ body {
     background-color: $secondary-color;
     gap:10px;
 
-    .cards__house {
+    &__house {
       position: relative;
      
-      .cards__image {
+      &__image {
         position: relative;
         width: 100%;
         border-radius: $border-radius;
         object-fit: cover;     
       } 
       
-      .cards__title {
+      &__title {
         position: absolute;
         line-height: 1.3em;
         left: 10px;
@@ -217,7 +218,7 @@ body {
     margin-top: 20px;
     background-color: black;
 
-    .footer__copyright {
+    &__copyright {
       margin-top: -20px;
       width:20%;
       text-align: center;
