--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -32,12 +32,12 @@ body {
   .logokasa {
     width: 210px;
   }
+
   .navbar {
     display: flex;
     flex-direction: horizontal;
     gap: 50px;
     font-size: 0.6em;
-
     &__link {
       color: $main-color;
       text-decoration: none;
@@ -45,7 +45,9 @@ body {
         text-decoration: underline;
       }
     }
-    
+    &__link.active {
+      text-decoration: underline;
+    }
    }
 }
 
@@ -85,35 +87,50 @@ body {
   background-color:  $third-color;
   border-radius: 25px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 50px;
+  overflow: hidden;
 
 
   &__house {
     position: relative;
     list-style: none;
-   
+    border-radius: 15px;
+    overflow: hidden;
+    max-height: 100%;
+
+ 
     &__image {
       position: relative;
       width: 100%;
-      border-radius: $border-radius;
+      height: 100%;
+
       object-fit: cover; 
-       overflow: hidden;    
+      overflow: hidden;  
+      transition: transform 0.3s ease;
+        
     } 
+
+    &:hover &__image {
+      transform: scale(1.05);
+    }
+
     &__gradient {
       position: absolute;
-      top: -10px;
+      top: 0;
       left:0;
+      height: auto;
       background: linear-gradient( rgba(255, 255, 255, 0),rgba(0, 0, 0, 0.0),rgba(0, 0, 0, 0.4));
       width: 100%;
       height: 100%;
       border-radius: $border-radius;
     }
+
     &__title {
       position: absolute;
       line-height: 1.3em;
       left: 10px;
-      bottom: 20px;
+      bottom: 10px;
       font-size: 0.5em;
       color: $secondary-color;
       text-shadow: 1px 1px 1px black;
