--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,16 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+@import 'variables';
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0px;
 }
-
-//Couleurs
-$main-color: black;
-$secondary-color: white;
-$third-color: #F6F6F6;
-$border-radius: 10px;
 
 body {
   margin: auto;
@@ -61,7 +56,7 @@ body {
     filter: brightness(50%);
     width: 100%;
     object-fit: cover;
-    border-radius: 25px;
+    border-radius: $border-radius;
     box-shadow: 0px 3px 0px rgba(0,0,0,0.3);
   }
 
@@ -85,7 +80,7 @@ body {
   max-width: 1240px;
   padding: 50px;
   background-color:  $third-color;
-  border-radius: 25px;
+  border-radius: $border-radius;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 50px;
@@ -95,7 +90,7 @@ body {
   &__house {
     position: relative;
     list-style: none;
-    border-radius: 15px;
+    border-radius: 10px;
     overflow: hidden;
     max-height: 100%;
 
@@ -104,7 +99,6 @@ body {
       position: relative;
       width: 100%;
       height: 100%;
-
       object-fit: cover; 
       overflow: hidden;  
       transition: transform 0.3s ease;
@@ -123,7 +117,7 @@ body {
       background: linear-gradient( rgba(255, 255, 255, 0),rgba(0, 0, 0, 0.0),rgba(0, 0, 0, 0.4));
       width: 100%;
       height: 100%;
-      border-radius: $border-radius;
+      border-radius: 10px;
     }
 
     &__title {
