--- a/src/styles/carousel.scss
+++ b/src/styles/carousel.scss
@@ -1,14 +1,20 @@
+@import 'variables';
+
 .house-carousel {
     position: relative;
     max-width: 1240px;
     
+    border-radius: $border-radius;
 
+    &__image {
+      width: 100%;
+      height: 100%;
+      max-height: 400px;
+      object-fit: cover;
+      
+    }
   }
-  
-  .house-carousel__image {
-    width: 100%;
-  }
-  
+    
   .fa-chevron-left,
   .fa-chevron-right {
     position: absolute;
