--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -43,168 +43,56 @@ body {
       text-decoration: underline;
     }
    }
-}
+   @media only screen and (max-width: 767px) {
 
-.banner {
-  position: relative;
-  display: flex;
-  height: 220px;
-  margin: 50px 100px;
-  
-  &__img {
-    filter: brightness(50%);
-    width: 100%;
-    object-fit: cover;
-    border-radius: $border-radius;
-    box-shadow: 0px 3px 0px rgba(0,0,0,0.3);
-  }
-
-  &__title {
-    position: absolute;
-    font-size: 1.0em;
-    color: $secondary-color;
-    margin: auto;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    font-weight: 700;
-    text-shadow: 0px 3px 2px rgba(0,0,0,0.5);
-    white-space: nowrap;
-  }
-}
-
-.cards {
-  margin: 0px 100px 50px 100px;
-  max-width: 1240px;
-  padding: 50px;
-  background-color:  $third-color;
-  border-radius: $border-radius;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 50px;
-  overflow: hidden;
-
-
-  &__house {
-    position: relative;
-    list-style: none;
-    border-radius: 10px;
-    overflow: hidden;
-    max-height: 100%;
-
- 
-    &__image {
-      position: relative;
-      width: 100%;
-      height: 100%;
-      object-fit: cover; 
-    
-      transition: transform 0.3s ease;
-        
-    } 
-
-    &:hover &__image {
-      transform: scale(1.05);
-    }
-
-    &__gradient {
-      position: absolute;
-      top: 0;
-      left:0;
-      height: auto;
-      background: linear-gradient( rgba(255, 255, 255, 0),rgba(0, 0, 0, 0.0),rgba(0, 0, 0, 0.4));
-      width: 100%;
-      height: 100%;
-      border-radius: 10px;
-    }
-
-    &__title {
-      position: absolute;
-      line-height: 1.3em;
-      left: 10px;
-      bottom: 10px;
-      font-size: 0.5em;
-      color: $secondary-color;
-      text-shadow: 1px 1px 1px black;
-    }
-  }
-}
-
-@media only screen and (max-width: 767px) {
-
-  .header {
-    margin:20px 20px;
-    display: flex;
-    justify-content:space-between;
-    align-items: center;
-  
-    .logokasa {
-      width: 145px;
-    }
-    .navbar {
+    .header {
+      margin:20px 20px;
       display: flex;
-      flex-direction: horizontal;
-      gap: 40px;
-      
-      &__link {
-        color: $main-color;
-        text-decoration: none;
-        font-size: 0.75em;
-      }
-      &__link:hover {
-        text-decoration: underline;
-      }
-     }
-  }
-
-  .banner {
-    margin: 0px 20px 20px 20px; 
-    max-width: 767px;
-    height: 110px; 
-    border-radius: $border-radius;
+      justify-content:space-between;
+      align-items: center;
     
-    &__img {
-      border-radius: $border-radius;
-    }
-    &__title {
-      font-size: 0.5em;
-      top: 50%;
-      left: 10%;
-      transform: translate(-10%, -50%); 
-      white-space: wrap;
-    }
-  }
-
-  .cards {
-    margin: 0px 20px 0px 20px;
-    padding: 0px;
-    background-color: $secondary-color;
-    gap:10px;
-
-    &__house {
-      position: relative;
-     
-      &__image {
-        position: relative;
-        width: 100%;
-        border-radius: $border-radius;
-        object-fit: cover;     
-      } 
-      
-      &__title {
-        position: absolute;
-        line-height: 1.3em;
-        left: 10px;
-        bottom: 20px;
-        font-size: 0.5em;
-        color: $secondary-color;
-        text-shadow: 1px 1px 1px black;
+      .logokasa {
+        width: 145px;
+      }
+      .navbar {
+        display: flex;
+        flex-direction: horizontal;
+        gap: 40px;
+        
+        &__link {
+          color: $main-color;
+          text-decoration: none;
+          font-size: 0.75em;
+        }
+        &__link:hover {
+          text-decoration: underline;
+        }
       }
     }
   }
+}
 
-  .footer {
+
+
+.footer {
+  max-width: 3160px;
+  margin-top: 50px;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 210px;
+  gap: 29px;
+
+  &__logo {
+    width: 122px;
+  }
+  &__copyright {
+    color: $secondary-color;
+    font-size: 0.75em;
+  }
+  @media only screen and (max-width: 767px) {
     margin-top: 20px;
     background-color: black;
 
