--- a/src/styles/banner.scss
+++ b/src/styles/banner.scss
@@ -13,12 +13,11 @@
       border-radius: $border-radius;
       box-shadow: 0px 3px 0px rgba(0,0,0,0.3);
     }
-  
     &__title {
       position: absolute;
       font-size: 1.0em;
       color: $secondary-color;
-      margin: auto;
+
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
@@ -29,22 +28,23 @@
     }
 
     @media only screen and (max-width: 767px) {
-        .banner {
-            margin: 0px 20px 20px 20px; 
-            max-width: 767px;
-            height: 110px; 
-            border-radius: $border-radius;
-            
-            &__img {
-              border-radius: $border-radius;
-            }
-            &__title {
-              font-size: 0.5em;
-              top: 50%;
-              left: 10%;
-              transform: translate(-10%, -50%); 
-              white-space: wrap;
-            }
-          }
+     
+      margin: 0px 20px 20px 20px; 
+      max-width: 767px;
+      height: 110px; 
+      
+      &__img {
+        border-radius: $mobile-border-radius;
+      }
+      &__title {
+        margin-left: 10px;
+        font-size: 0.5em;
+        top: 50%;
+        left: 10%;
+        transform: translate(-10%, -50%); 
+        white-space: wrap;
+        line-height: normal;
+      }
+    
   }
 }
