--- a/src/styles/cards.scss
+++ b/src/styles/cards.scss
@@ -55,35 +55,29 @@
         text-shadow: 1px 1px 1px black;
       }
     }
-  }
-
+ 
+  
   @media only screen and (max-width: 767px) {
+    margin: 0px 20px 0px 20px;
+    padding: 0px;
+    background-color: $secondary-color;
+    gap:20px;
+    border-radius: $mobile-border-radius; 
 
-    .cards {
-        margin: 0px 20px 0px 20px;
-        padding: 0px;
-        background-color: $secondary-color;
-        gap:10px;
-    
-        &__house {
-          position: relative;
-         
-          &__image {
-            position: relative;
-            width: 100%;
-            border-radius: $border-radius;
-            object-fit: cover;     
-          } 
-          
-          &__title {
-            position: absolute;
-            line-height: 1.3em;
-            left: 10px;
-            bottom: 20px;
-            font-size: 0.5em;
-            color: $secondary-color;
-            text-shadow: 1px 1px 1px black;
-          }
-        }
+    &__house {
+      &__image { 
+        border-radius: $mobile-border-radius;    
+      } 
+
+      &__title { /* Modification ici */
+        position: absolute;
+        line-height: 1.3em;
+        left: 10px;
+        bottom: 20px;
+        font-size: 0.5em;
+        color: $secondary-color;
+        text-shadow: 1px 1px 1px black;
       }
+    }
   }
+}
