--- a/src/styles/house.scss
+++ b/src/styles/house.scss
@@ -3,81 +3,181 @@
  
  .house {
     max-width: 1240px;
-    margin: auto;
+    margin: 0 100px;
     color: $boxColor;
-   
-    .house-infos-line1 {
+
+    .house-carousel {
+        position: relative;
     
-        display: flex;
-        margin-top: 10px;
-        justify-content: space-between;
-    
-        &__title {
-            color:$boxColor;
-            font-size: 0.9em;
-            font-weight: 100;
+        &__image {
+          width: 100%;
+          height: 100%;
+          max-height: 400px;
+          object-fit: cover;
+          border-radius: $border-radius;
+          
         }
-
-        &__location{
-            margin-top: -10px;
-            color: $main-color;
-            font-size: 0.5em;
-        }
-
-        &__host {
-            display: flex;
-            flex-direction: row;
-            gap: 10px;
-            font-size: 0.55em;
-            text-align: end;
-            justify-content: flex-end;
-
-            img {
-                background-color: #C4C4C4;
-                border-radius: 50%;
-                width: auto; /* Utilisez une largeur automatique */
-                height: 70px; /* Définissez une hauteur explicite */
-                object-fit: cover;
-            }
-      
-        }
-    }
-    .house-infos-line2 {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        margin-top: -10px;
+      }
         
-    
-        &__tags {
-          display: flex;
-          align-items: center;
-          gap: 5px;      
-        }
-    
-        &__tags li {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            list-style-type: none;
-            background-color: $boxColor;
-            color: $secondary-color;
-            padding: 0 10px;
-          border-radius: 10px;
-          font-size: 0.4em;
-          min-width: 115px;
-          height: 25px;
-        }
-    
-        &__rating {
-          display: flex;
-          font-size: 0.6em;
-        }
-    
+    .fa-chevron-left,
+    .fa-chevron-right {
+    position: absolute;
+    font-size: 2em;
+    top: 50%;
+    transform: translateY(-50%);
+    color: white;
+    cursor: pointer;
     }
-}
-.star-icon {
-    margin-left:12px;
+    
+    .fa-chevron-left {
+    left: 10px;
+    }
+    
+    .fa-chevron-right {
+    right: 10px;
+    }
+   
+    .house-infos { 
+        
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+        margin: 0 0 20px 0;
+
+        &__column1 {
+            display: flex;
+            justify-content: space-between;
+            
+
+            &__title {
+                color:$boxColor;
+                font-size: 1em;
+                font-weight: 100;
+            }
+
+            &__location{
+                margin-top: -10px;
+                color: $main-color;
+                font-size: 0.5em;
+            }
+
+            &__tags {
+                display: flex;
+                flex-wrap: wrap;
+                align-items: center;
+                gap: 5px;
+                margin-top: 10px;      
+            }
+        
+            &__tags li {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                list-style-type: none;
+                background-color: $boxColor;
+                color: $secondary-color;
+                padding: 0 10px;
+                border-radius: 10px;
+                font-size: 0.4em;
+                min-width: 115px;
+                height: 25px;
+            }
+        }
+
+        &__column2 {
+            
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            flex-direction: column;
+            white-space: pre-line;
+            
+            &__host {
+
+                display: flex;
+                flex-direction: row;
+                gap: 10px;
+                font-size: 0.55em;
+                text-align: end;
+                p {
+                    display: flex;
+                    align-items: center; /* Centre verticalement */
+                     justify-content: flex-end; /* Aligne à droite */
+                    max-width: 100px;
+                    line-height: 1.4em;
+                }
+                img {
+                    background-color: #C4C4C4;
+                    border-radius: 50%;
+                    width: auto; 
+                    height: 64px;
+                    object-fit: cover;
+                }
+            }
+
+            &__rating {
+            margin-top: 10px;
+            display: flex;
+            font-size: 0.6em;
+                .star-icon {
+                    margin-left:12px;
+                }
+            }
+        
+        }
+    }
+
+    @media screen and (max-width:797px) {
+
+        margin: 0 20px;
+        .fa-chevron-left,
+        .fa-chevron-right {
+            font-size: 0.75em;
+        }
+
+        .house-infos {
+            flex-direction: column;
+            &__column1{
+                &__title{
+                    font-size: 0.6em;
+                }
+                &__location{
+                    margin-top: -20px;
+                    font-size: .4em;
+                }
+                &__tags{
+                    font-size: .8em;
+
+                }
+            }
+            &__column2{
+                align-items: center;
+                flex-direction: row-reverse;
+                justify-content: space-between;
+                &__host{
+                    align-items: center;
+                    justify-content:space-between;
+                    text-align:right;
+                    font-size: .37em;
+                    p {
+                        max-width: 80px;
+                    }
+                    img{
+                        height: 44px;
+                    }
+                }
+                &__rating{
+                    font-size: 0.4em; 
+                    .star-icon {
+                        margin-left: 0px;
+                        margin-right: 8px;
+                    }
+                }
+            }
+        }
+        
+
+    }     
 }
 
 .house-box-group {
@@ -88,5 +188,12 @@
     width: 100%;
     gap:70px;
     margin: auto;
-    // margin-bottom: 25px;
+
+    @media screen and (max-width:767px) {
+        display: flex;
+            flex-direction: column;
+            width: 100%;
+
+        }
+
   }
