ajout variable $mobile-border-radius

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,4 +3,5 @@ $secondary-color: white;
 $third-color: #F6F6F6;
 $boxColor: #FF6060;
 $border-radius: 25px;
+$mobile-border-radius: 10px;
 $box-border-radius: 10px;
