--- a/src/styles/dropdown-house.scss
+++ b/src/styles/dropdown-house.scss
@@ -1,21 +1,35 @@
 @import 'variables';
 
 
-.house-description-box {
+.house-box-group {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  max-width: 1240px;
+  width: 100%;
+  gap:70px;
+  margin: auto;
+
+  @media screen and (max-width:767px) {
+      display: flex;
+      gap: 0;
+      flex-direction: column;
+      }
+}
+
+.house-box {
   cursor: pointer;
   display: flex;
   flex-direction: column;
   width: 100%;
   justify-content: space-between;
-  min-height: 50px;
-  margin-bottom: 25px;
   overflow: hidden;
 
   .fa-chevron-up, .fa-chevron-down {
-    font-size: 1.25em;
+    font-size: 1.6em;
   }
 
-    &__title {
+  &__title {
     letter-spacing: 1.2px;
     display: flex;
     flex-direction: row;
@@ -23,7 +37,7 @@
     background-color: $boxColor;
     border-radius: $box-border-radius;
     font-weight: bold;
-    font-size: 0.45em;
+    font-size: 0.5em;
     color: $secondary-color;
     padding: 0px 20px 0px 10px;
     z-index: 2;
@@ -44,84 +58,38 @@
   }
 
   &.open {
-    .house-description-box__text-container {
-
+    .house-box__text-container {
       transform: translateY(0%);
       background-color: $third-color;
-      margin-bottom: 20px;
+      margin-bottom: 0px;
     }
   }
 }
 
-.house-equip-box {
-  cursor: pointer;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  justify-content: space-between;
-  min-height: 50px;
-  margin-bottom: 25px;
-  overflow: hidden;
-  position: relative;
-
-  &__title {
-    letter-spacing: 1.2px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: $boxColor;
-    border-radius: $box-border-radius;
-    font-weight: bold;
-    font-size: 0.45em;
-    color: $secondary-color;
-    padding: 0px 20px 0px 10px;
-    z-index: 2;
-  }
-
-  &__text-container {
+@media screen and (max-width:767px) {
+  .house-box {
+    font-size:.8em;
+    .fa-chevron-up, .fa-chevron-down {
+      font-size: 1.5em;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    &__title {
+      display: flex;
+      align-items: center;
+      flex-direction: row;
+      height: 4vh;
+      border-radius: 5px;
+      padding-top: 0px;
+    }
+    &.open {
+      .house-box__text-container {
   
-    color: $main-color;
-    font-size: 0.5em;
-    line-height: 25px;
-    background-color: transparent;
-    border-radius: $box-border-radius;
-    padding: 20px;
-    top: 50px;
-    transform: translateY(-100%);
-    transition: transform 0.2s ease-in-out, margin-top 0.2s ease;
-    z-index: 1;
-    margin-bottom: 0px;
-  }
-
-  &.open {
-    .house-equip-box__text-container {
-      transform: translateY(0%);
-      background-color: $third-color;
-      margin-bottom: 20px;
-  }
-}
-
-@media only screen and (max-width: 767px) {
-  .house-description-box {
-    &__text-container {
-      margin-bottom: -35px;
-    }
-    &.open {
-      &__text-container {
+        transform: translateY(0%);
+        background-color: $third-color;
         margin-bottom: 10px;
       }
     }
   }
-
-  .house-equip-box {
-    &__text-container {
-      margin-bottom: -35px;
-    }
-    &.open {
-      &__text-container {
-        margin-bottom: 10px;
-      }
-    }
-  }
-}
 }
