--- a/src/styles/cards.scss
+++ b/src/styles/cards.scss
@@ -69,7 +69,7 @@
         border-radius: $mobile-border-radius;    
       } 
 
-      &__title { /* Modification ici */
+      &__title {
         position: absolute;
         line-height: 1.3em;
         left: 10px;
