--- a/src/styles/house.scss
+++ b/src/styles/house.scss
@@ -101,8 +101,8 @@
                 text-align: end;
                 p {
                     display: flex;
-                    align-items: center; /* Centre verticalement */
-                     justify-content: flex-end; /* Aligne à droite */
+                    align-items: center; 
+                    justify-content: flex-end; 
                     max-width: 100px;
                     line-height: 1.4em;
                 }
